--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "storybook:build": "cross-env NODE_NO_WARNINGS=1 storybook build --quiet --webpack-stats-json",
     "test:unit": "cross-env NODE_NO_WARNINGS=1 jest",
     "test:unit:watch": "npm run test:unit -- --watch",
+    "test:staged": "npm run test:unit --bail --findRelatedTests",
     "test": "npm run test:unit",
     "prepare": "husky install"
   },
