build(dep): add million

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -57,6 +57,7 @@ updates:
       react:
         patterns:
           - 'react'
+          - 'million'
           - 'react-dom'
           - '@types/react'
           - '@types/react-dom'
