--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "gray-matter": "~4.0.3",
     "husky": "8.0.3",
     "lint-staged": "15.2.0",
+    "million": "~3.0.6",
     "next": "~14.1.1",
     "next-intl": "~3.4.0",
     "next-themes": "~0.2.1",
