meta: added million.js compiler (react) and updated packages

--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@savvywombat/tailwindcss-grid-areas": "~4.0.0",
-    "@sentry/nextjs": "~7.93.0",
+    "@sentry/nextjs": "~7.107.0",
     "@tailwindcss/container-queries": "~0.1.1",
-    "@types/node": "20.11.24",
+    "@types/node": "20.11.28",
     "@vcarl/remark-headings": "~0.1.0",
     "@vercel/analytics": "~1.2.2",
     "@vercel/speed-insights": "~1.0.10",
@@ -66,15 +66,16 @@
     "github-slugger": "~2.0.0",
     "glob": "~10.3.10",
     "gray-matter": "~4.0.3",
-    "husky": "8.0.3",
-    "lint-staged": "15.2.0",
-    "next": "~14.1.1",
-    "next-intl": "~3.4.0",
-    "next-themes": "~0.2.1",
+    "husky": "9.0.11",
+    "lint-staged": "15.2.2",
+    "million": "~3.0.6",
+    "next": "~14.1.3",
+    "next-intl": "~3.9.5",
+    "next-themes": "~0.3.0",
     "postcss": "~8.4.35",
     "postcss-calc": "~9.0.1",
-    "postcss-import": "~16.0.0",
-    "postcss-mixins": "~9.0.4",
+    "postcss-import": "~16.0.1",
+    "postcss-mixins": "~10.0.0",
     "postcss-simple-vars": "~7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -82,32 +83,32 @@
     "rehype-slug": "~6.0.0",
     "remark-gfm": "~4.0.0",
     "remark-reading-time": "~2.0.1",
-    "semver": "~7.5.4",
-    "shiki": "~1.1.2",
-    "tailwindcss": "^3.4.0",
-    "turbo": "1.12.4",
-    "typescript": "~5.3.2",
+    "semver": "~7.6.0",
+    "shiki": "~1.2.0",
+    "tailwindcss": "^3.4.1",
+    "turbo": "1.12.5",
+    "typescript": "~5.4.2",
     "unist-util-visit": "~5.0.0",
     "vfile": "~6.0.1",
     "vfile-matter": "~5.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-controls": "~7.6.17",
-    "@storybook/addon-interactions": "~7.6.17",
-    "@storybook/addon-themes": "~7.6.17",
-    "@storybook/addon-viewport": "~7.6.17",
-    "@storybook/nextjs": "~7.6.17",
+    "@storybook/addon-controls": "~8.0.0",
+    "@storybook/addon-interactions": "~8.0.0",
+    "@storybook/addon-themes": "~8.0.0",
+    "@storybook/addon-viewport": "~8.0.0",
+    "@storybook/nextjs": "~8.0.0",
     "@testing-library/jest-dom": "~6.4.2",
     "@testing-library/react": "~14.2.1",
     "@testing-library/user-event": "~14.5.2",
     "@types/jest": "29.5.12",
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
-    "@types/semver": "~7.5.5",
-    "@typescript-eslint/eslint-plugin": "7.1.0",
-    "@typescript-eslint/parser": "7.1.0",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@types/semver": "~7.5.8",
+    "@typescript-eslint/eslint-plugin": "7.2.0",
+    "@typescript-eslint/parser": "7.2.0",
     "eslint": "8.57.0",
-    "eslint-config-next": "~14.1.1",
+    "eslint-config-next": "~14.1.3",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-mdx": "3.1.5",
     "eslint-plugin-no-relative-import-paths": "^1.5.3",
@@ -117,10 +118,10 @@
     "jest-environment-jsdom": "29.7.0",
     "jest-junit": "16.0.0",
     "prettier": "3.2.5",
-    "prettier-plugin-tailwindcss": "0.5.11",
+    "prettier-plugin-tailwindcss": "0.5.12",
     "remark-frontmatter": "5.0.0",
     "remark-preset-lint-node": "5.0.0",
-    "storybook": "~7.6.17",
+    "storybook": "~8.0.0",
     "stylelint": "16.2.1",
     "stylelint-config-standard": "36.0.0",
     "stylelint-order": "6.0.4",
