--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "github-slugger": "~2.0.0",
     "glob": "~10.3.12",
     "gray-matter": "~4.0.3",
+    "hast-util-to-string": "^3.0.0",
     "husky": "9.0.11",
     "lint-staged": "15.2.2",
     "next": "~14.1.4",
