build(script): use `dev` instead of `serve`

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "scripts:release-post": "cross-env NODE_NO_WARNINGS=1 node scripts/release-post/index.mjs",
-    "serve": "cross-env NODE_NO_WARNINGS=1 next dev --turbo",
+    "dev": "cross-env NODE_NO_WARNINGS=1 next dev --turbo",
     "build": "cross-env NODE_NO_WARNINGS=1 next build",
     "start": "cross-env NODE_NO_WARNINGS=1 next start",
     "deploy": "cross-env NEXT_PUBLIC_STATIC_EXPORT=true npm run build",
