--- a/package.json
+++ b/package.json
@@ -128,5 +128,6 @@
     "stylelint-selector-bem-pattern": "4.0.0",
     "turbo": "1.13.2",
     "user-agent-data-types": "0.4.2"
-  }
+  },
+  "packageManager": "pnpm@8.6.3+sha1.30b2ad9776a393ccd1766239fd21e0c14a3c3acf"
 }
