--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,6 +3,9 @@ contact_links:
   - name: Report an API Docs Issue on the Node.js Website
     url: https://github.com/nodejs/node/issues/new?assignees=&labels=doc&template=3-api-ref-docs-problem.yml
     about: 'Is something wrong with the API Docs? Did you face a bug with the API Docs?'
+  - name: Report an issue with Distribution Binaries
+    url: https://github.com/nodejs/release-cloudflare-worker/issues/new
+    about: 'Is something wrong with Node.js downloads?'
   - name: Report a Translation Issue on the Node.js Website
     url: https://crowdin.com/project/nodejs-web
     about: 'Is something wrong in a specific translation? Do you believe a language can get improved? Do you have suggestions?'
