--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "packageManager": "npm@10.7.0",
   "scripts": {
     "scripts:release-post": "cross-env NODE_NO_WARNINGS=1 node scripts/release-post/index.mjs",
-    "dev": "cross-env NODE_NO_WARNINGS=1 next dev",
+    "dev": "cross-env NODE_NO_WARNINGS=1 next dev --turbo",
     "serve": "npm run dev",
     "build": "cross-env NODE_NO_WARNINGS=1 next build",
     "start": "cross-env NODE_NO_WARNINGS=1 next start",
@@ -72,7 +72,7 @@
     "gray-matter": "~4.0.3",
     "husky": "9.0.11",
     "lint-staged": "15.2.5",
-    "next": "~14.2.3",
+    "next": "~14.2.4",
     "next-intl": "~3.14.1",
     "next-themes": "~0.3.0",
     "postcss": "~8.4.38",
@@ -128,7 +128,7 @@
     "stylelint-config-standard": "36.0.0",
     "stylelint-order": "6.0.4",
     "stylelint-selector-bem-pattern": "4.0.0",
-    "turbo": "2.0.1",
+    "turbo": "2.0.3",
     "user-agent-data-types": "0.4.2"
   }
 }
