ci: add commitizen and an associated husky script
This makes it so that you only need to run 'git commit' in order to get conventional-commit
compliant commits.

--- a/package.json
+++ b/package.json
@@ -109,6 +109,8 @@
     "@types/semver": "~7.5.8",
     "@typescript-eslint/eslint-plugin": "7.11.0",
     "@typescript-eslint/parser": "7.11.0",
+    "commitizen": "4.3.0",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "8.57.0",
     "eslint-config-next": "~14.2.3",
     "eslint-config-prettier": "9.1.0",
