--- a/package.json
+++ b/package.json
@@ -20,25 +20,14 @@
     "apps/*"
   ],
   "scripts": {
-    "scripts:release-post": "cross-env NODE_NO_WARNINGS=1 node scripts/release-post/index.mjs",
-    "dev": "cross-env NODE_NO_WARNINGS=1 next dev --turbo",
-    "serve": "npm run dev",
-    "build": "cross-env NODE_NO_WARNINGS=1 next build",
-    "start": "cross-env NODE_NO_WARNINGS=1 next start",
-    "deploy": "cross-env NEXT_PUBLIC_STATIC_EXPORT=true npm run build",
-    "lint:js": "eslint \"**/*.{js,mjs,ts,tsx}\" --cache --cache-strategy=content --cache-location=.eslintjscache",
-    "lint:md": "eslint \"**/*.md?(x)\" --cache --cache-strategy=content --cache-location=.eslintmdcache",
-    "lint:css": "stylelint \"**/*.css\" --allow-empty-input --cache --cache-strategy=content --cache-location=.stylelintcache",
-    "lint": "turbo run lint:md lint:js lint:css",
-    "lint:fix": "turbo run lint:md lint:js lint:css --no-cache -- --fix",
+    "build": "turbo run build",
+    "start": "turbo run start",
+    "check-types": "turbo check-types",
+    "lint": "turbo run lint",
+    "lint:fix": "turbo run lint --force -- --fix",
     "prettier": "prettier \"**/*.{js,mjs,ts,tsx,md,mdx,json,yml,css}\" --check --cache --cache-strategy=content --cache-location=.prettiercache",
     "prettier:fix": "npm run prettier -- --write",
     "format": "npm run lint:fix && npm run prettier:fix",
-    "sync-orama": "node ./scripts/orama-search/sync-orama-cloud.mjs",
-    "storybook": "cross-env NODE_NO_WARNINGS=1 storybook dev -p 6006 --quiet --no-open",
-    "storybook:build": "cross-env NODE_NO_WARNINGS=1 storybook build --quiet --webpack-stats-json",
-    "test:unit": "cross-env NODE_NO_WARNINGS=1 jest",
-    "test:unit:watch": "npm run test:unit -- --watch",
     "test": "turbo test:unit",
     "prepare": "husky"
   },
