--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,8 @@
 {
-  "**/*.{js,mjs,ts,tsx,md,mdx}": ["eslint --fix", "prettier --check --write"],
+  "**/*.{js,mjs,ts,tsx,md,mdx}": [
+    "eslint ./apps/site --fix",
+    "prettier --check --write"
+  ],
   "**/*.css": ["stylelint --allow-empty-input", "prettier --write"],
   "**/*.{json,yml}": ["prettier --check --write"]
 }
