--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,6 @@
 {
   "**/*.{js,mjs,ts,tsx,md,mdx}": [
-    "eslint ./apps/site --fix",
+    "turbo run lint:lint-staged --",
     "prettier --check --write"
   ],
   "**/*.css": ["stylelint --allow-empty-input", "prettier --write"],
