--- a/apps/site/.eslintrc.json
+++ b/apps/site/.eslintrc.json
@@ -19,6 +19,7 @@
       "plugins": ["import"],
       "extends": ["eslint:recommended", "next", "next/core-web-vitals"],
       "rules": {
+        "import/namespace": "off",
         "import/order": [
           "error",
           {
@@ -48,6 +49,10 @@
         "plugin:import/typescript"
       ],
       "parser": "@typescript-eslint/parser",
+      "parserOptions": {
+        "project": true,
+        "tsconfigRootDir": "."
+      },
       "rules": {
         "@typescript-eslint/consistent-type-imports": "error",
         "@typescript-eslint/array-type": ["error", { "default": "generic" }],
