--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "test": "turbo test:unit",
     "prepare": "husky"
   },
-  "devDependencies": {
+  "dependencies": {
     "husky": "9.0.11",
     "lint-staged": "15.2.5",
+    "turbo": "2.0.3"
+  },
+  "devDependencies": {
     "prettier": "3.3.0",
     "prettier-plugin-tailwindcss": "0.6.1",
-    "turbo": "2.0.3",
     "typescript": "~5.4.2"
   }
 }
