--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "husky": "^9.0.11",
+    "husky": "9.0.11",
     "lint-staged": "15.2.5",
     "turbo": "2.0.3"
   },
