--- a/apps/site/vercel.json
+++ b/apps/site/vercel.json
@@ -1,3 +1,4 @@
 {
-  "buildCommand": "turbo build"
+  "buildCommand": "turbo build",
+  "installCommand": "npm install --omit=dev --include-workspace-root"
 }
