--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
+    "storybook:build": "turbo run storybook:build",
     "start": "turbo run start",
     "check-types": "turbo check-types",
     "scripts:release-post": "turbo run scripts:release-post",
