chore: create initial i18n pkg

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "packageManager": "npm@10.7.0",
   "workspaces": [
-    "apps/*"
+    "apps/*",
+    "packages/*"
   ],
   "scripts": {
     "dev": "turbo run dev",
