--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,10 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "tasks": {
+    "build": {
+      "dependsOn": ["^build"],
+      "outputs": [".next/**", "!.next/cache/**", "dist/**"]
+    },
     "scripts:release-post": {
       "cache": false
     },
@@ -8,10 +12,18 @@
       "outputs": [".prettiercache"]
     },
     "lint": {
-      "dependsOn": ["lint:md", "lint:css", "lint:js"]
+      "dependsOn": [
+        "@nodejs/website#lint:md",
+        "@nodejs/website#lint:css",
+        "@nodejs/website#lint:js"
+      ]
     },
     "lint:lint-staged": {
-      "dependsOn": ["lint:md", "lint:css", "lint:js"]
+      "dependsOn": [
+        "@nodejs/website#lint:md",
+        "@nodejs/website#lint:css",
+        "@nodejs/website#lint:js"
+      ]
     },
     "check-types": {
       "dependsOn": ["^topo"]
