chore: remove useless build task

--- a/apps/site/turbo.json
+++ b/apps/site/turbo.json
@@ -21,6 +21,7 @@
       ]
     },
     "build": {
+      "dependsOn": ["^build"],
       "inputs": [
         "{app,components,hooks,i18n,layouts,middlewares,pages,providers,types,util}/**/*.{ts,tsx}",
         "{app,components,layouts,pages,styles}/**/*.css",
