--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -38,7 +38,7 @@
   "dependencies": {
     "@heroicons/react": "~2.1.1",
     "@mdx-js/mdx": "^3.0.1",
-    "@nodejs/i18n": "^0.1.0",
+    "@node-core/website-i18n": "0.1.0",
     "@nodevu/core": "~0.1.0",
     "@orama/highlight": "^0.1.6",
     "@oramacloud/client": "^1.3.2",
