--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@heroicons/react": "~2.1.5",
     "@mdx-js/mdx": "^3.0.1",
+    "@node-core/website-i18n": "*",
     "@nodevu/core": "~0.1.0",
     "@orama/highlight": "^0.1.6",
     "@oramacloud/client": "^1.3.2",
