chore: set up lint

--- a/turbo.json
+++ b/turbo.json
@@ -8,7 +8,11 @@
       "outputs": [".prettiercache"]
     },
     "lint": {
-      "dependsOn": ["lint:md", "lint:css", "lint:js"]
+      "dependsOn": [
+        "@node-core/website#lint:md",
+        "@node-core/website#lint:css",
+        "lint:js"
+      ]
     },
     "lint:lint-staged": {
       "dependsOn": [
