Set up i18n package (#6991)
* build: change package scopes

* build: create packages workspace

* feat: create initial i18n package

* feat: create import locale fn

* chore: some peaks

* refactor: remove duplicated type

* chore: set up lint

* chore: dep fix

* fix: crowdin config

* fix: fix modules, eslint

* fix: fixed lint, test and build process

* chore: code review changes

* chore: fix turbo.json

* chore: fix package versions

* fix: fix build due to shiki

* chore: (unrelated) shiki js engine

---------

Co-authored-by: Claudio Wunder <cwunder@gnome.org>

--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "private": true,
-  "name": "@nodejs/website",
+  "name": "@node-core/website",
   "description": "Nodejs.org Website",
   "homepage": "https://nodejs.org",
   "repository": {
@@ -38,41 +38,42 @@
   "dependencies": {
     "@heroicons/react": "~2.1.5",
     "@mdx-js/mdx": "^3.0.1",
+    "@node-core/website-i18n": "*",
     "@nodevu/core": "~0.1.0",
     "@orama/highlight": "^0.1.6",
-    "@oramacloud/client": "^1.3.2",
-    "@radix-ui/react-accessible-icon": "^1.0.3",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
+    "@oramacloud/client": "^1.3.15",
+    "@radix-ui/react-accessible-icon": "^1.1.0",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@savvywombat/tailwindcss-grid-areas": "~4.0.0",
-    "@sentry/nextjs": "~8.14.0",
+    "@sentry/nextjs": "~8.30.0",
     "@tailwindcss/container-queries": "~0.1.1",
-    "@types/node": "20.16.3",
+    "@types/node": "20.16.5",
     "@vcarl/remark-headings": "~0.1.0",
     "@vercel/analytics": "~1.3.1",
-    "@vercel/speed-insights": "~1.0.10",
-    "autoprefixer": "~10.4.18",
+    "@vercel/speed-insights": "~1.0.12",
+    "autoprefixer": "~10.4.20",
     "classnames": "~2.5.1",
     "cross-env": "7.0.3",
     "dedent": "1.5.3",
     "feed": "~4.2.2",
     "github-slugger": "~2.0.0",
-    "glob": "~10.4.1",
+    "glob": "~11.0.0",
     "gray-matter": "~4.0.3",
-    "next": "~14.2.7",
-    "next-intl": "~3.19.0",
+    "next": "~14.2.11",
+    "next-intl": "~3.19.1",
     "next-themes": "~0.3.0",
-    "postcss": "~8.4.40",
-    "postcss-calc": "~10.0.0",
+    "postcss": "~8.4.45",
+    "postcss-calc": "~10.0.2",
     "postcss-import": "~16.1.0",
-    "postcss-mixins": "~10.0.1",
+    "postcss-mixins": "~11.0.1",
     "postcss-simple-vars": "~7.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -80,54 +81,50 @@
     "rehype-slug": "~6.0.0",
     "remark-gfm": "~4.0.0",
     "remark-reading-time": "~2.0.1",
-    "semver": "~7.6.0",
-    "shiki": "~1.15.2",
-    "tailwindcss": "^3.4.7",
-    "typescript": "~5.5.3",
+    "semver": "~7.6.3",
+    "shiki": "~1.17.5",
+    "tailwindcss": "^3.4.11",
     "unist-util-visit": "~5.0.0",
     "vfile": "~6.0.3",
     "vfile-matter": "~5.0.0"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.1.1",
-    "@next/eslint-plugin-next": "^14.2.8",
-    "@storybook/addon-controls": "~8.2.7",
-    "@storybook/addon-interactions": "~8.2.7",
-    "@storybook/addon-themes": "~8.2.7",
-    "@storybook/addon-viewport": "~8.2.7",
-    "@storybook/nextjs": "~8.2.7",
+    "@eslint/compat": "~1.1.1",
+    "@next/eslint-plugin-next": "~14.2.11",
+    "@storybook/addon-controls": "~8.3.0",
+    "@storybook/addon-interactions": "~8.3.0",
+    "@storybook/addon-themes": "~8.3.0",
+    "@storybook/addon-viewport": "~8.3.0",
+    "@storybook/nextjs": "~8.3.0",
     "@testing-library/jest-dom": "~6.5.0",
     "@testing-library/react": "~16.0.1",
     "@testing-library/user-event": "~14.5.2",
-    "@types/jest": "29.5.12",
+    "@types/jest": "29.5.13",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/semver": "~7.5.8",
-    "eslint": "^9.10.0",
-    "eslint-config-next": "~14.2.8",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import-x": "^4.2.1",
-    "eslint-plugin-mdx": "3.1.5",
-    "eslint-plugin-no-relative-import-paths": "^1.5.3",
-    "eslint-plugin-react": "^7.35.2",
-    "eslint-plugin-react-hooks": "5.1.0-rc.0",
-    "eslint-plugin-storybook": "0.9.0--canary.156.da7873a.0",
+    "eslint": "~9.10.0",
+    "eslint-config-next": "~14.2.11",
+    "eslint-import-resolver-typescript": "~3.6.3",
+    "eslint-plugin-import-x": "~4.2.1",
+    "eslint-plugin-mdx": "~3.1.5",
+    "eslint-plugin-no-relative-import-paths": "~1.5.5",
+    "eslint-plugin-react": "~7.36.1",
+    "eslint-plugin-react-hooks": "5.1.0-rc-4c58fce7-20240904",
+    "eslint-plugin-storybook": "0.9.0--canary.156.26b630a.0",
     "handlebars": "4.7.8",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-junit": "16.0.0",
     "remark-frontmatter": "5.0.0",
     "remark-preset-lint-node": "5.1.2",
-    "storybook": "~8.2.7",
+    "storybook": "~8.3.0",
     "stylelint": "16.9.0",
     "stylelint-config-standard": "36.0.1",
     "stylelint-order": "6.0.4",
-    "stylelint-selector-bem-pattern": "4.0.0",
-    "typescript-eslint": "^8.4.0",
+    "stylelint-selector-bem-pattern": "4.0.1",
+    "typescript": "~5.5.4",
+    "typescript-eslint": "~8.5.0",
     "user-agent-data-types": "0.4.2"
-  },
-  "overrides": {
-    "eslint": "$eslint"
   }
 }
